fix search alignment on ee dash

--- a/src/routes/employeeDashboard/style.css
+++ b/src/routes/employeeDashboard/style.css
@@ -17,7 +17,7 @@
 }
 
 .employeeDashboard_flexContainerExp {
-	padding: 35px 25px 0 200px;
+	padding: 35px 25px 0 150px;
 }
 
 .employeeDashboard_link, .employeeDashboard_link_active {
